<resources>
    <string name="app_name">Weather App</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="temperature">0</string>
    <string name="weather_description">Weather Description</string>
    <string name="degree">°F</string>
    <string name="weather_picture">weather_picture</string>

    <string name="change_locations">Change Locations</string>
    <string name="city_name">city name</string>
    <string name="imagebutton">imageButton</string>

    <string-array name="cities_list">
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>Houston</item>
        <item>Phoenix</item>
        <item>Philadelphia</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>Dallas</item>
        <item>San Jose</item>
        <item>Austin</item>
        <item>London</item>
        <item>Paris</item>
        <item>Tokyo</item>
        <item>Berlin</item>
        <item>Sacramento</item>
        <item>Folsom</item>
        <item>Boca Raton</item>
    </string-array>

    <string-array name="raining_sound">
        <item>@drawable/icon_rain</item>
        <item>@drawable/icon_showerrain</item>
        <item>@drawable/icon_thunderstorm</item>
    </string-array>

    <string-array name="windy_sound">
        <item>@drawable/icon_brokenclouds</item>
        <item>@drawable/icon_fewclouds</item>
        <item>@drawable/icon_mist</item>
        <item>@drawable/icon_overcastclouds</item>
        <item>@drawable/icon_scatteredclouds</item>
        <item>@drawable/icon_snow</item>
    </string-array>

</resources>